crates/swc_fast_ts_strip/tests/errors/parameter-property.ts



class Foo {
    constructor(public id: string) { }
}


class Bar {
    constructor(private id: string) { }
}